--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3'
 
+
 services:
   db:
     image: postgres:10.1
@@ -7,7 +8,8 @@ services:
       - postgres_data:/var/lib/postgresql/data/
   web:
     build: .
-    command: python /code/manage.py migrate --noinput
+    command: python /code/manage.py makemigrations
+    command: python /code/manage.py migrate
     command: python /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
